--- a/PlayC++DLL/PlayC++DLL.vcxproj
+++ b/PlayC++DLL/PlayC++DLL.vcxproj
@@ -13,7 +13,8 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{FBD43024-4EC8-4DA8-9DDD-8EFC7A506599}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>PlayCDLL</RootNamespace>
+    <RootNamespace>RecordingDLL</RootNamespace>
+    <ProjectName>Recording</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -79,7 +80,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Record1.c" />
+    <ClCompile Include="Recording.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Header.h" />
