--- a/Recording/Recording.csproj
+++ b/Recording/Recording.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E2B65BB8-7C91-482F-85E6-8246857B8122}</ProjectGuid>
+    <ProjectGuid>{A08DBB7A-BFBA-4544-BE18-84416A016F17}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PlaySoundDLL_Working</RootNamespace>
-    <AssemblyName>PlaySoundDLL-Working</AssemblyName>
+    <RootNamespace>Recording</RootNamespace>
+    <AssemblyName>Recording</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -34,7 +34,6 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,16 +44,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AudioRecorder.cs">
+    <Compile Include="RecordingCSharp.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AudioRecorder.Designer.cs">
-      <DependentUpon>AudioRecorder.cs</DependentUpon>
+    <Compile Include="RecordingCSharp.Designer.cs">
+      <DependentUpon>RecordingCSharp.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="AudioRecorder.resx">
-      <DependentUpon>AudioRecorder.cs</DependentUpon>
+    <EmbeddedResource Include="RecordingCSharp.resx">
+      <DependentUpon>RecordingCSharp.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
