--- a/RecordingC/RecordingC.vcxproj
+++ b/RecordingC/RecordingC.vcxproj
@@ -57,6 +57,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalOptions>winmm.lib %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -78,7 +79,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Recording.cpp" />
+    <ClCompile Include="Recording.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Header.h" />
