--- a/RecordingC/RecordingC.vcxproj.filters
+++ b/RecordingC/RecordingC.vcxproj.filters
@@ -20,7 +20,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Recording.c">
+    <ClCompile Include="Recording.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
